Add class to hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @theme {
   --color-primary: #e13d43;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
